# financeiroAPI

./: Dockerfile  docker-compose.yaml  pyproject.toml  settings.toml
app/: auth.py  configs.py  database.py  main.py  router.py
app/models/: __init__.py  categoria.py  item.py  pagamento.py  parcela.py  usuario.py  usuarios.py
app/repository/: __init__.py  categoria.py  pagamento.py  usuario.py
app/routers/: categoria.py  pagamento.py  usuario.py
app/schemas/: __init__.py  categoria.py  pagamento.py  parcela.py  usuario.py
